Fix spacing

--- a/_sass/_cta-box.sass
+++ b/_sass/_cta-box.sass
@@ -1,6 +1,6 @@
 .cta-box
     display: flex
-    margin: 0 7px 25px 0
+    margin: 0 0 25px 0
     padding: 20px
     border: 1px solid #c6c6c6
 
