--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -353,6 +353,7 @@
 @media (min-width: 1200px)
 	.post-column.col-lg-7
 		width: 62%
+		padding-right: 1px
 	
 	.post-column.col-lg-3 
 		width: 22%
